chore(api): merge public API layer rework into master and release 2.0.19
- add CoreApi facade (apiVersion / roleApiVersion / supports / capabilities / modVersion) and api/spi bridge contracts
- publish downstream-facing types: MatchRestStateApi, RoleVisibilityApi, ModeMapVotePhase, scene.asset, scene.model, client.menu, client.scene.compat
- implement bridge layer: CoreSpiRegistrar, SreRuntimeBridgeImpl, VoteBridgeImpl, MenuGateBridgeImpl, RoleOverrideBridgeImpl, SceneContextResolver
- add tests: API layer dependency guard, version constant consistency, SPI and scene value objects
- move unused dumps / .class / old SRE backups into libs/_residue/
- sync AGENTS.md and README.md to the Windows workspace and 2.0.19